Terraform/endpoints.tf
# ==========================================
# Task 7 - VPC Endpoints
# ==========================================


# ==========================================
# 1. S3 Gateway Endpoint
# ==========================================

resource "aws_vpc_endpoint" "s3" {
  vpc_id = aws_vpc.app.id

  service_name = "com.amazonaws.us-east-1.s3"

  vpc_endpoint_type = "Gateway"

  route_table_ids = [
    aws_route_table.private.id
  ]

  tags = {
    Name = "depi-sec-s3-endpoint"
  }
}


# ==========================================
# 2. Endpoint Security Group
# ==========================================

resource "aws_security_group" "endpoint" {
  name        = "depi-sec-endpoint-sg"
  description = "Security group for VPC interface endpoints"
  vpc_id      = aws_vpc.app.id

  tags = {
    Name = "depi-sec-endpoint-sg"
  }
}


resource "aws_vpc_security_group_ingress_rule" "endpoint_https" {
  security_group_id = aws_security_group.endpoint.id

  ip_protocol = "tcp"
  from_port   = 443
  to_port     = 443

  cidr_ipv4 = "10.0.0.0/16"
}


# ==========================================
# 3. SSM Interface Endpoint
# ==========================================

resource "aws_vpc_endpoint" "ssm" {
  vpc_id = aws_vpc.app.id

  service_name = "com.amazonaws.us-east-1.ssm"

  vpc_endpoint_type = "Interface"

  subnet_ids = [
    aws_subnet.private_a.id,
    aws_subnet.private_b.id
  ]

  security_group_ids = [
    aws_security_group.endpoint.id
  ]

  private_dns_enabled = true

  tags = {
    Name = "depi-sec-ssm-endpoint"
  }
}


# ==========================================
# 4. SSM Messages Interface Endpoint
# ==========================================

resource "aws_vpc_endpoint" "ssmmessages" {
  vpc_id = aws_vpc.app.id

  service_name = "com.amazonaws.us-east-1.ssmmessages"

  vpc_endpoint_type = "Interface"

  subnet_ids = [
    aws_subnet.private_a.id,
    aws_subnet.private_b.id
  ]

  security_group_ids = [
    aws_security_group.endpoint.id
  ]

  private_dns_enabled = true

  tags = {
    Name = "depi-sec-ssmmessages-endpoint"
  }
}


# ==========================================
# 5. EC2 Messages Interface Endpoint
# ==========================================

resource "aws_vpc_endpoint" "ec2messages" {
  vpc_id = aws_vpc.app.id

  service_name = "com.amazonaws.us-east-1.ec2messages"

  vpc_endpoint_type = "Interface"

  subnet_ids = [
    aws_subnet.private_a.id,
    aws_subnet.private_b.id
  ]

  security_group_ids = [
    aws_security_group.endpoint.id
  ]

  private_dns_enabled = true

  tags = {
    Name = "depi-sec-ec2messages-endpoint"
  }
}
